<resources>
    <string name="app_name">My Carni-Garden</string>

    <string name="createPlant_header">Plant a file-ling</string>
    <string name="createPlant_tabs">Tabs for creation</string>
    <string name="createPlant_fragments">Fragments for Tabs</string>

    <string name="hint_speciesName">Species name</string>
    <string name="hint_family">Family</string>
    <string name="hint_lifeSpan">Est. life span</string>
    <string name="hint_height">Growth height (cm)</string>
    <string name="hint_desc">Description</string>

    <string name="hint_subsName">Substrate name</string>
    <string name="hint_subsIngred">Ingredient name</string>
    <string name="hint_subsShare">Parts</string>
    <string name="hint_subsWater">Watering cycle (days)</string>

    <string name="hint_continent">Continent</string>
    <string name="hint_area">Area/country</string>
    <string name="hint_lighting">Lighting</string>
    <string name="hint_highland">Highlands</string>

    <string name="btn_toSubstrate">Link to substrates</string>
    <string name="btn_toOrigin">Link to origin</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_back">Go back</string>
    <string name="hint_wateringInDays">Watering</string>
    <string name="hint_material">Material</string>
    <string name="submit_substrate">Submit substrate</string>
    <string name="cancel_substrate">Cancel substrate</string>
    <string name="add_substrate">Add substrate</string>
    <string name="add_lighting">Add Lighting</string>
    <string name="upload_an_image">Upload an image</string>
    <string name="lighting">Lighting</string>
    <string name="winter">Winter:</string>
    <string name="substrate_switch">Selection mode of Substrate</string>
    <string name="spinner_family">Select a family</string>
    <string name="spinner_continent">Select a continent</string>
    <string name="spinner_winter">Select a winter level</string>

    <string-array name="continents">
        <item>Europe</item>
        <item>Africa</item>
        <item>Asia</item>
        <item>North America</item>
        <item>South America</item>
        <item>Australia</item>
    </string-array>

    <string-array name="families">
        <item>Aldrovanda</item>
        <item>Byblis</item>
        <item>Cephalotus</item>
        <item>Darlingtonia Californica</item>
        <item>Dionaea Muscipula</item>
        <item>Drosera</item>
        <item>Drosophyllum</item>
        <item>Genlisea</item>
        <item>Heliamphora</item>
        <item>Nepenthes</item>
        <item>Pinguicula</item>
        <item>Roridula</item>
        <item>Sarracenia</item>
        <item>Utricularia</item>
    </string-array>

    <string-array name="winter">
        <item>None</item>
        <item>Mild</item>
        <item>Full</item>
    </string-array>
</resources>