<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dip"
    android:id="@+id/tab_info">

    <ImageButton
        android:id="@+id/uploadImage"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/upload_an_image"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toTopOf="@+id/nameInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/image_edit" />

    <EditText
        android:id="@+id/editText_speciesName"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/hint_speciesName"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/uploadImage"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_family"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/hint_family"
        android:inputType="text"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/uploadImage"
        app:layout_constraintTop_toBottomOf="@+id/editText_speciesName" />

    <EditText
        android:id="@+id/editText_maxHeight"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/hint_height"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/uploadImage"
        app:layout_constraintTop_toBottomOf="@+id/editText_family" />

    <EditText
        android:id="@+id/editText_lifeSpan"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/hint_lifeSpan"
        android:inputType="text"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/uploadImage"
        app:layout_constraintTop_toBottomOf="@+id/editText_maxHeight" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxBackgroundMode="none"
        app:layout_constraintTop_toBottomOf="@+id/editText_lifeSpan"
        tools:layout_editor_absoluteX="5dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editText_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_desc"
                android:inputType="textMultiLine"
                android:textSize="20sp" />
        </ScrollView>
    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/goToSubstrate"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/btn_toSubstrate"
        android:onClick="onGoToSubstrate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/arrow_right_bold_circle"/>


</androidx.constraintlayout.widget.ConstraintLayout>