<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dip">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btn_goBack"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginRight="20dip"
            android:scaleType="centerCrop"
            android:src="@drawable/arrow_left_bold"
            />

        <TextView
            android:id="@+id/header"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:text="@string/createPlant_header" />
    </LinearLayout>

    <com.google.android.material.tabs.TabLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/createPlantTabs"
        android:contentDescription="@string/createPlant_tabs"/>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager_createPlantTabs"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/createPlant_fragments" />

</LinearLayout>