<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    android:id="@+id/tab_Origins">

    <ImageButton
        android:id="@+id/submitPlant"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:contentDescription="@string/btn_submit"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/check_circle" />

    <EditText
        android:id="@+id/editText_continent"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/hint_continent"
        android:inputType="text"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_area"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/hint_area"
        android:inputType="text"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_continent" />

    <Switch
        android:id="@+id/switch_highland"
        android:layout_width="wrap_content"
        android:layout_height="52dp"
        android:layout_marginTop="5dp"
        android:text="@string/hint_highland"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_area" />

    <TextView
        android:id="@+id/textView_lighting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch_highland"
        tools:text="Lighting" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_lighting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/textView_lighting"
        tools:layout_editor_absoluteX="5dp" />

</androidx.constraintlayout.widget.ConstraintLayout>