<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tab_substrate"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dip"
            tools:ignore="ScrollViewSize">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_substrates"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxHeight="120dp"
                android:padding="5dp"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_marginBottom="201dp"
                app:layout_constraintBottom_toTopOf="@+id/btn_addSubstrate"
                app:layout_constraintTop_toBottomOf="@+id/rv_substrates"
                android:background="@android:color/darker_gray"/>

            <ImageButton
                android:id="@+id/btn_addSubstrate"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/add_substrate"
                android:scaleType="centerCrop"
                android:src="@drawable/plus_circle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider" />

            <LinearLayout
                android:id="@+id/header_createSubstrate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/btn_addSubstrate"
                tools:layout_editor_absoluteX="5dp">

                <ImageView
                    android:id="@+id/substrateIcon_create"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="24dp"
                    app:srcCompat="@drawable/sprout" />

                <EditText
                    android:id="@+id/editText_substrateName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="0.85"
                    android:hint="@string/hint_subsName"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/wateringIcon_create"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="5dp"
                    app:srcCompat="@drawable/watering_can" />

                <EditText
                    android:id="@+id/editText_watering"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="0.15"
                    android:hint="@string/hint_wateringInDays"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_addSubsIngredients"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:maxHeight="120dp"
                app:layout_constraintHeight_percent="0.4"
                app:layout_constraintTop_toBottomOf="@+id/header_createSubstrate"
                tools:listitem="@layout/detail_column_substrate_create_ingredient" />

            <ImageButton
                android:id="@+id/btn_submitSubstrate"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="120dp"
                android:contentDescription="@string/submit_substrate"
                android:scaleType="centerCrop"
                android:src="@drawable/check_circle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rv_addSubsIngredients" />

            <ImageButton
                android:id="@+id/btn_cancelCreateSubstrate"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="120dp"
                android:contentDescription="@string/cancel_substrate"
                android:scaleType="centerCrop"
                android:src="@drawable/close_circle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rv_addSubsIngredients" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <ImageButton
        android:id="@+id/goToOrigin"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/btn_toOrigin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/arrow_right_bold_circle" />
</androidx.constraintlayout.widget.ConstraintLayout>